--- a/src/app/modules/doctor/pages/patient-results/patient-results.component.html
+++ b/src/app/modules/doctor/pages/patient-results/patient-results.component.html
@@ -66,9 +66,9 @@
         </mat-table>
       </div>
 
-      <div class="save-button-group">
-        <button mat-raised-button (click)="saveAllData()">Save the selected tests</button>
-      </div>
+<!--      <div class="save-button-group">-->
+<!--        <button mat-raised-button (click)="saveAllData()">Save the selected tests</button>-->
+<!--      </div>-->
 
       <div class="chart-show-group" *ngIf="isSelectedResult">
         <p class="selected-test">{{this.selectedResult.date}} - {{this.selectedResult.side}} - time since medication {{this.selectedResult.medicineSupply}} [h]</p>
