--- a/src/app/modules/doctor/pages/patient-details/information/remove-patient/remove-patient.component.html
+++ b/src/app/modules/doctor/pages/patient-details/information/remove-patient/remove-patient.component.html
@@ -1,8 +1,8 @@
 <div class="remove-patient-dialog">
-  <h3 class="title-patient-form">Czy jesteś pewnien, że chcesz usunąć konto?</h3>
+  <h3 class="title-patient-form">Are you sure you want to delete your account?</h3>
 
   <div class="button-position" >
-    <button mat-raised-button type="submit" color="primary" class="edit-button" (click)="removePatient()" >Usuń konto pacjenta</button>
-    <button mat-raised-button type="button" color="warn" class="edit-button" (click)="cancelDialog()">Anuluj</button>
+    <button mat-raised-button type="submit" color="primary" class="edit-button" (click)="removePatient()" >Delete account</button>
+    <button mat-raised-button type="button" color="warn" class="edit-button" (click)="cancelDialog()">Cancel</button>
   </div>
 </div>
