--- a/src/app/modules/admin/pages/browser-doctors/components/add-doctor/add-doctor.component.html
+++ b/src/app/modules/admin/pages/browser-doctors/components/add-doctor/add-doctor.component.html
@@ -1,6 +1,6 @@
 <div class="add-new-patient-dialog">
   <div class="stepper-title">
-    <h3 class="title-patient-form">Create patient account</h3>
+    <h3 class="title-patient-form">Create Doctor Account</h3>
     <p class="info-form">Enter the data needed to register your patient.</p>
   </div>
   <div class="container-form-group">
